Add compact NEBIH Action response
